codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_active_tree.snap
---
source: tui/src/app/eta_view_tests.rs
assertion_line: 150
expression: "render(&view(), 96, 24)"
---
"                                                                                                "
"   Task estimates                                                                               "
"   2 active   2 history   updated 2023-11-14 22:13:50 UTC                                       "
"   Finish: unknown   Remaining: unknown                                                         "
"   [Active]  History                                                                            "
"   ──────────────────────────────────────────────────────────────────────────────────────────   "
"   Task                        Agent         Status                    Remaining                "
"   ▾ Prepare release           Lead          active                    30s–1m                   "
"       Run checks              Worker 0000…  blocked · ⚠               1m–2m                    "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"↑↓ select  ←→/tab switch tab  enter expand  esc close                                           "
