codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_columns_at_80.snap
---
source: tui/src/app/eta_view_tests.rs
expression: "render(&view, 80, 24)"
---
"                                                                                "
"   Task estimates                                                               "
"   2 active   2 history   updated 2023-11-14 22:13:50 UTC                       "
"   Finish: 2023-11-14 22:14:50 UTC–2023-11-14 22:15:50 UTC   Remaining: 1m–2m   "
"   [Active]  History                                                            "
"   ──────────────────────────────────────────────────────────────────────────   "
"   Task        Agent         Status                    Remaining                "
"   ▾ Prepare…  Lead          active                    30s–1m                   "
"       Run c…  Worker 0000…  active                    30s–1m                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"↑↓ select  ←→/tab switch tab  enter expand  esc close                           "
