codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_finish_range_utc.snap
---
source: tui/src/app/eta_view_tests.rs
assertion_line: 168
expression: "render(&view, 96, 24)"
---
"                                                                                                "
"   Task estimates                                                                               "
"   2 active   2 history   updated 2023-11-14 22:13:50 UTC                                       "
"   Finish: 2023-11-14 22:14:50 UTC–2023-11-14 22:15:50 UTC   Remaining: 1m–2m                   "
"   [Active]  History  All Sessions                                                              "
"   ──────────────────────────────────────────────────────────────────────────────────────────   "
"   Task                        Agent         Status                    Remaining                "
"   ▾ Prepare release           Lead          active                    30s–1m                   "
"       Run checks              Worker 0000…  active                    1m–2m                    "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"↑↓ select  ←→/tab switch tab  enter expand  esc close                                           "
