codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_history_accuracy.snap
---
source: tui/src/app/eta_view_tests.rs
expression: "render(&view, 96, 24)"
---
"                                                                                                "
"   Task estimates                                                                               "
"   2 active   2 history   updated 2023-11-14 22:13:50 UTC                                       "
"   Finish: unknown   Remaining: unknown                                                         "
"   Active  [History]  All Sessions                                                              "
"   ──────────────────────────────────────────────────────────────────────────────────────────   "
"   Task                        Agent         Status                    Actual / original        "
"     Publish notes             Worker 0000…  completed · Within        1m / 1m–3m               "
"     Optional cleanup          Lead          cancelled                 12s / 1m–3m              "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"↑↓ select  ←→/tab switch tab  enter expand  esc close  pgdn more history                        "
