codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_history_lifecycle_timestamps.snap
---
source: tui/src/app/eta_view_tests.rs
assertion_line: 174
expression: lifecycle_lines
---
Started: 2023-11-14 22:13:20 UTC
Ended: 2023-11-14 22:14:35 UTC
