codex-rs/tui/src/app/snapshots/codex_tui__app__eta_view__tests__eta_history_named_timezone.snap
---
source: tui/src/app/eta_view_tests.rs
expression: "render(&view, 96, 24)"
---
"                                                                                                "
"   Task estimates                                                                               "
"   2 active   2 history   updated 2023-11-14 17:13:50 EST                                       "
"   Finish: unknown   Remaining: unknown                                                         "
"   Active  [History]                                                                            "
"   ──────────────────────────────────────────────────────────────────────────────────────────   "
"   Task                        Agent         Status                    Actual / original        "
"     Publish notes             Worker 0000…  completed · Within        1m / 1m–3m               "
"     Optional cleanup          Lead          cancelled                 12s / 1m–3m              "
"                                                                                                "
"   Task details                                                                                 "
"   Title: Publish notes                                                                         "
"   Agent: Worker 00000000                                                                       "
"   Status: completed · Within                                                                   "
"   Started: 2023-11-14 17:13:20 EST                                                             "
"   Ended: 2023-11-14 17:14:35 EST                                                               "
"   Current: unknown                                                                             "
"   Original: 1m–3m                                                                              "
"   Actual: 1m                                                                                   "
"   Updated: 2023-11-14 17:13:40 EST                                                             "
"   Revisions: 1                                                                                 "
"     #1: 1m–2m · 2023-11-14 17:13:40 EST · by 00000000 · worker update                          "
"                                                                                                "
"↑↓ select  ←→/tab switch tab  enter expand  esc close  pgdn more history                        "
